Layout and template updates.
- Streamlines a good number of layouts and pages.
- Attempts to make page/post headers uniform.
- Visually merges SLab header and navigation.
- Only displays a taller SLab header on homepage.

--- a/index.html
+++ b/index.html
@@ -76,9 +76,8 @@ title: Home
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto quasi, minima, laboriosam exercitationem officia corporis itaque molestias adipisci assumenda cupiditate alias rem blanditiis modi odio repellat ullam voluptate eius deleniti!</p>
     </div>
     <figure>
-        <img src="" alt="">
-            <figcaption></figcaption>
-        </img>
+        <img src="" alt=""></img>
+        <figcaption></figcaption>
     </figure>
 </section>
 <section class="feature">
