--- a/pages/research-and-development.html
+++ b/pages/research-and-development.html
@@ -1,65 +1,49 @@
 ---
-layout: default
+layout: page
 title: "Research and Development"
 permalink: /research-and-development/
 nav: true
 order: 6
 ---
 
-<div class="rd-landing-wrapper">
-	<div class="rd-landing-grid">
-		<div class="rd-landing__page-title" aria-label="Landing page">
-			<div class="rd-title__text">Research &amp; Development</div>
-		</div>
-	</div> <!-- end landing grid -->
-</div> <!-- end landing wrapper -->
+<section>
+	<h2>What We Do</h2>
+	<p>For faculty and students interested in digitial humanities, we provide research and teaching consultation on a variety of concepts, approaches, and tools, including digital collections & exhibitions, data collection and management, machine learning, text analysis, and more. We have a broad familiarity with a diverse variety of technologies, but our particular strengths lie in the critical pedagogical and scholarly application of those technologies for the humanities.</p>
+	<ul>
+	<li><strong>Background research and developing a bibliography of existing DH work relevant to your particular project or research interests</strong>. It's likely the research project you're developing already has peer in the DH world, similar either in topic, discipline, or technical features and approach. The Scholars' Lab can help you review existing work to establish how your own contribution fits into that. Similar to doing a literature review for your book or dissertation, but with digital projects.</li>
+	<li><strong>Project scoping and management</strong>. We can help you take your broader ideas and help develop them into a list of concrete, actionable tasks or deliverables that you can work on. If you’re not sure how complex your project will be, we can also help you scope it out.</li>
+	<li><strong>Evaluating tools and methods relevant to your work</strong>. We have experience with a range of programming languages, markup languages, content management systems, and libraries, and can provide recommendations based on your interests and level of experience.</li>
+	<li><strong>User experience and interface design</strong>. We have experience researching and designing project interfaces that engage critically with subject matter in a variety of disciplines.</li>
+	<li><strong>Data collection, cleaning, organization, management and preservation</strong>. Whether it's arranging a corpus of texts, structuring an archive of historical primary source materials, or acquiring social media data, we can help you work with your research and teaching data.</li>
+	<li><strong>Conference and publication proposals</strong>. Our team, and other staff at the Scholars' Lab, have decades of experience publishing or sharing DH research at conferences and in academic journals. If you're interested in submitting proposals based on your DH work, we'd be glad to help review those proposals and offer suggestions.</li>
+	</ul>
+	<p>Whether you're a student working on a digital humanities project for a class, or you're faculty wishing to learn more about using particular DH methods or tools in course or research, we can help you find appropriate resources for your work.</p>
+	</section>
 
-<div class="rd-main-content">
-	<div class="rd__mission">
-		<div class="rd__title">What We Do</div>
-		<!-- insert relevant links in this text: -->
-		<div class="rd__text">
-			<p>For faculty and students interested in digitial humanities, we provide research and teaching consultation on a variety of concepts, approaches, and tools, including digital collections & exhibitions, data collection and management, machine learning, text analysis, and more. We have a broad familiarity with a diverse variety of technologies, but our particular strengths lie in the critical pedagogical and scholarly application of those technologies for the humanities.</p>
-			</p>
-			<ul>
-			<li><strong>Background research and developing a bibliography of existing DH work relevant to your particular project or research interests</strong>. It's likely the research project you're developing already has peer in the DH world, similar either in topic, discipline, or technical features and approach. The Scholars' Lab can help you review existing work to establish how your own contribution fits into that. Similar to doing a literature review for your book or dissertation, but with digital projects.</li>
-			<li><strong>Project scoping and management</strong>. We can help you take your broader ideas and help develop them into a list of concrete, actionable tasks or deliverables that you can work on. If you’re not sure how complex your project will be, we can also help you scope it out.</li>
-			<li><strong>Evaluating tools and methods relevant to your work</strong>. We have experience with a range of programming languages, markup languages, content management systems, and libraries, and can provide recommendations based on your interests and level of experience.</li>
-			<li><strong>User experience and interface design</strong>. We have experience researching and designing project interfaces that engage critically with subject matter in a variety of disciplines.</li>
-			<li><strong>Data collection, cleaning, organization, management and preservation</strong>. Whether it's arranging a corpus of texts, structuring an archive of historical primary source materials, or acquiring social media data, we can help you work with your research and teaching data.</li>
-			<li><strong>Conference and publication proposals</strong>. Our team, and other staff at the Scholars' Lab, have decades of experience publishing or sharing DH research at conferences and in academic journals. If you're interested in submitting proposals based on your DH work, we'd be glad to help review those proposals and offer suggestions.</li>
-			</ul>
-			<p>Whether you're a student working on a digital humanities project for a class, or you're faculty wishing to learn more about using particular DH methods or tools in course or research, we can help you find appropriate resources for your work.</p>
-		</div>
-	</div>
-
-	<div class="rd__work">
-		<div class="rd__title">Example Work and Resources</div>
-		<div class="rd__text">
-			<p>Our <a href="/work/">Work</a> page lists all the projects Scholars' Lab staff have supported over the years. Here are a few examples:</p>
-			<ul>
-				<li><a href="https://digitalcollecting.lib.virginia.edu">Take Back the Archive</a></li>
-				<li><a href="https://salem.lib.virginia.edu">Salem Witch Trials Documentary Archive</a></li>
-				<li><a href="https://jeffersons-notes.org">Notes on the State of Virginia</a></li>
-				<li><a href="https://connection.scholarslab.org/">Connection Established</a></li>
-			</ul>
-
-		<p>Related resources at UVA</p>
-		<ul class="rd-resources__list">
+	<section id="example-work">
+		<h2>Example Work and Resources</h2>
+		<p>Our <a href="/work/">Work</a> page lists all the projects Scholars' Lab staff have supported over the years. Here are a few examples:</p>
+		<ul>
+			<li><a href="https://digitalcollecting.lib.virginia.edu">Take Back the Archive</a></li>
+			<li><a href="https://salem.lib.virginia.edu">Salem Witch Trials Documentary Archive</a></li>
+			<li><a href="https://jeffersons-notes.org">Notes on the State of Virginia</a></li>
+			<li><a href="https://connection.scholarslab.org/">Connection Established</a></li>
+		</ul>
+		<h3>Related resources at UVA</h3>
+		<ul>
 			<li><a href="https://guides.lib.virginia.edu/dh">Digital Humanities LibGuide</a></li>
 			<li><a href="https://dh.library.virginia.edu">DH@UVA Website</a></li>
 			<li><a href="https://datascience.virginia.edu/degrees/digital-humanities-certificate">Digital Humanities Graduate Certificate</a></li>
 
 		</ul>
-	</div>
-	</div>
-	<div class="rd__people">
-		<div class="rd__title">Get In Touch!</div>
-		<ul class="rd-people__list">
+	</section>
+	<section id="staff">
+		<h2>Get In Touch!</h2>
+		<ul>
 			<!-- use Liquid here: -->
 			{% for person in site.people %}
 			{% if person.title == 'Jeremy Boggs' or person.title == 'Shane Lin' %}
-			<li class="rd-people__person">
+			<li>
 				<div class="rd-person__img"><img src="{{ site.baseurl }}/assets/img/people/{{ person.slug }}.jpg" alt="{{ person.title }}"></div>
 				<div class="rd-person__name"><a href="{{ site.baseurl }}/people/{{ person.slug }}">{{ person.title }}</a></div> <!-- link to their page -->
 				<div class="rd-person__position">{{ person.position }}</div>
@@ -67,6 +51,4 @@ order: 6
 			{% endif %}
 			{% endfor %}
 		</ul> <!-- end person list -->
-	</div>
-
-</div> <!-- end main content -->
+	</section>
