--- a/pages/spatial-technologies.html
+++ b/pages/spatial-technologies.html
@@ -1,55 +1,10 @@
 ---
-layout: default
+layout: page
 title: Spatial Tech
 permalink: /spatial-technologies/
 nav: true
 order: 6
 ---
-
-<div class="spatial-landing-wrapper">
-	<div class="spatial-landing-grid">
-		<div class="spatial-landing__page-title" aria-label="Landing page">
-			<div class="spatial-title__text">Spatial Tech</div>
-		</div>
-		<div class="spatial-landing__cube-wrapper-1">
-			<div class="spatial-landing__lines1">
-				<div></div>
-				<div></div>
-				<div></div>
-				<div></div>
-				<div></div>
-				<div></div>
-				<div></div>
-				<div></div>
-				<div></div>
-			</div>
-		</div>
-		<div class="spatial-landing__cube-wrapper-3">
-			<div class="spatial-landing__lines3">
-				<div></div>
-				<div></div>
-				<div></div>
-				<div></div>
-				<div></div>
-				<div></div>
-				<div></div>
-				<div></div>
-				<div></div>
-			</div>
-		</div>
-		<div class="spatial-landing__lines2">
-			<div></div>
-			<div></div>
-			<div></div>
-			<div></div>
-			<div></div>
-			<div></div>
-			<div></div>
-			<div></div>
-			<div></div>
-		</div>
-	</div> <!-- end landing grid -->
-</div> <!-- end landing wrapper -->
 
 <div class="spatial-main-content">
 
@@ -76,7 +31,7 @@ order: 6
 		  	    <li>Hours: Weekdays 9-5 in general, but <a href="mailto: slabgis@virginia.edu">email the GIS folks</a> in advance if you need us to be there</li>
 				<h3>Cultural heritage informatics staff availability</h3>
 				<li>Staff: Will Rourk and Arin Bennett</li>
-				<li>Office: Clemons 3rd Floor (DML wing)</li>				
+				<li>Office: Clemons 3rd Floor (DML wing)</li>
 				<li>Hours: by appointment</li>
 			</ul>
 		</div>
@@ -113,7 +68,7 @@ order: 6
 		  <ul class="maker-list__3d">
 			  <span><a href="https://guides.lib.virginia.edu/gis/software">GIS software & extensions</a></span>
 		    <li><a href="https://guides.lib.virginia.edu/gis/software#s-lib-ctab-20595149-1">ArcGIS Pro</a></li>
-		    <li>ArcMap</li>			
+		    <li>ArcMap</li>
 		    <li>ArcGIS Server</li>
 		    <li>Drone2Map*</li>
 			<li>City Engine*</li>
