--- a/pages/work.html
+++ b/pages/work.html
@@ -1,49 +1,11 @@
 ---
-layout: default
+layout: page
 title: Our Work
 permalink: /work/
 excerpt: "Here we share a sampling of the Scholars’ Lab scholarship in its many states and forms, from incipient ideas to projects with their own laptop stickers."
 nav: true
 order: 3
 ---
-
-<div class="research-landing-wrapper">
-	<div class="research-landing-grid">
-		<div class="research-landing__page-title" aria-label="Landing page">
-			<div class="research-title__text">Our Work</div>
-		</div>
-		<div class="research-landing__lines1">
-			<div></div>
-			<div></div>
-			<div></div>
-			<div></div>
-			<div></div>
-			<div></div>
-			<div></div>
-			<div></div>
-			<div></div>
-		</div>
-		<div class="research-landing__lines2">
-			<div></div>
-			<div></div>
-			<div></div>
-			<div></div>
-			<div></div>
-			<div></div>
-			<div></div>
-			<div></div>
-			<div></div>
-		</div>
-	</div>
-</div>
-
-<div class="research__description">
-	<div class="research-description__text">
-		<p>This page shares a sampling of the Scholars’ Lab scholarship in its many states and forms, from incipient ideas to projects with their own laptop stickers. (<a href="/about/#who-are-the-scholars-in-scholars-lab">We define "scholarship" inclusively</a>.)</p>
-	</div>
-</div>
-
-<article class="people-main-content">
     <!-- staff: -->
     <section class="people__staff">
       <!-- section label: -->
