--- a/index.html
+++ b/index.html
@@ -24,19 +24,13 @@ title: Home
 </section>
 
 <section id="newsletter">
-    <p>Learn about events, news, and more in our newsletter!</p>
+    <p>Learn about events, news, and more in <a href="http://eepurl.com/h_riIP">our newsletter</a>!</p>
 </section>
 
 <section id="about-us" class="feature">
     <div>
     <h2>About Us</h2>
-    <p>The Scholars’ Lab, part of the UVA Library’s DH Center, is an
-    interdisciplinary lab for the critical exploration of technology and its
-    interventions on research, scholarship, and pedagogy. Our staff are informed
-    by digital humanities, computer and information science, spatial
-    technologies, maker, and cultural heritage approaches. While much of our
-    work focuses on humanistic questions, we are open to all and welcome
-    collaborations from across campus</p>
+    <p>The Scholars' Lab is an interdisciplinary research lab for critical, creative, and anti-oppressive explorations of the intersections of technology and culture. We offer mentoring, collaboration, and supportive space for anyone curious about pushing scholarly boundaries through creative, computational research practice. While much of our work deals with cultural and humanities questions, we welcome and routinely collaborate with all disciplines. Our staff offer deep expertise in digital humanities, computer and information science, spatial technologies, maker, and cultural heritage approaches. Our international scholarly leadership lets us connect UVA colleagues to the forefront of digital and experimental scholarship, collaborators, and opportunities.</p>
     </div>
     <figure>
         <img src="" alt="">
@@ -47,9 +41,20 @@ title: Home
 </section>
 <section id="our-spaces" class="feature">
     <div>
-        <h2>Our Spaces</h2>
-        <p>The Lab includes co-working areas, an event space, a VR immersion space, and data processing workstations. It is open whenever Shannon Library is open, but appointments are encouraged if you want to meet a particular staff member or ensure access to specific equipment.</p>
-        <p>The Makerspace is a place for tinkering and experimentation with technologies like circuitry, 3D printing, and laser cutting. Open to everyone, we specialize in applications and research questions in the humanities and arts.</p>
+        <h2>Our Work</h2>
+        <p>Curious? Please get in touch — absolutely no prior experience or fully formed ideas needed! Email us at <a href="mailto:scholarslab@virginia.edu">scholarslab@virginia.edu</a> with questions, or to schedule a teaching or research consultation. Our staff has particular strengths in:		
+<ul>
+<li>digital humanities</li>
+<li>DH project design & development</li> 
+<li>collaborative project management</li>
+<li>digital pedagogy</li>
+<li>GIS/mapping & analysis</li>
+<li>cultural heritage informatics</li>
+<li>3D laser scanning & photogrammetry</li>
+<li>3D printing, making, & electronics</li>
+<li>and virtual/augmented reality</li>
+</ul>
+</p>
     </div>
     <figure>
         <img src="/assets/img/makerspace/printmaking1.jpg" alt="">
@@ -61,8 +66,12 @@ title: Home
 
 <section class="feature">
     <div>
-        <h2>Lorem Ipsum Dolor</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto quasi, minima, laboriosam exercitationem officia corporis itaque molestias adipisci assumenda cupiditate alias rem blanditiis modi odio repellat ullam voluptate eius deleniti!</p>
+        <h2>Lab Space & Makerspace</h2>
+        <h3>THE LAB</h3>
+        <p>The Scholars’ Lab includes staff offices, co-working areas, an event space, a VR immersion space (<< LINK #tk), and data processing workstations. Appointments are encouraged if you want to meet a particular staff member or ensure access to specific equipment (<< Reservation info LINK #tk), though the space itself is open whenever Shannon Library is open.</p>
+		<h3>THE LAB'S MAKERSPACE</H3>
+<p>The Makerspace is a place for tinkering and experimentation with technologies like circuitry, 3D printing, and laser cutting. Open to everyone, we specialize in applications and research questions in the humanities and arts. The Makerspace staff provides consultation and instruction whenever the Makerspace is open, or by appointment. Please drop in, or send inquiries to <a href="mailto:slabmakerspace@virginia.edu">slabmakerspace@virginia.edu</a>.</p>
+</p>
     </div>
     <figure>
         <img src="" alt="">
@@ -72,8 +81,8 @@ title: Home
 </section>
 <section class="feature">
     <div>
-        <h2>Lorem Ipsum Dolor</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto quasi, minima, laboriosam exercitationem officia corporis itaque molestias adipisci assumenda cupiditate alias rem blanditiis modi odio repellat ullam voluptate eius deleniti!</p>
+        <h2>Digital Humanities Code + Design</h2>
+        <p>We provide research and teaching consultation on a variety of digital humanities concepts, approaches, and tools, including digital collections & exhibitions, data collection and management, machine learning, text analysis, and more. Our particular strengths lie in the critical pedagogical and scholarly application of those technologies for the humanities.</p>
     </div>
     <figure>
         <img src="" alt=""></img>
@@ -82,8 +91,8 @@ title: Home
 </section>
 <section class="feature">
     <div>
-        <h2>Lorem Ipsum Dolor</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto quasi, minima, laboriosam exercitationem officia corporis itaque molestias adipisci assumenda cupiditate alias rem blanditiis modi odio repellat ullam voluptate eius deleniti!</p>
+        <h2>Spatial Technologies</h2>
+        <p>We've got experts in mapping, GIS data, cultural heritage laser scanning & preservation, augmented & virtual reality, and other spatial approaches (including ArcGIS StoryMaps) for representing our world across space + time. Contact us at <a href="mailto:spatial@virginia.edu">spatial@virginia.edu</a> to schedule an individual consultation or course instruction session. </p>
     </div>
     <figure>
         <img src="" alt="">
@@ -93,8 +102,8 @@ title: Home
 </section>
 <section class="feature">
     <div>
-        <h2>Lorem Ipsum Dolor</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto quasi, minima, laboriosam exercitationem officia corporis itaque molestias adipisci assumenda cupiditate alias rem blanditiis modi odio repellat ullam voluptate eius deleniti!</p>
+        <h2>Fellowships + Training</h2>
+        <p>We support the work of emerging scholars and digital humanities practitioners. In addition to our general consultations, we offer three graduate fellowship programs that provide students with the time, space, and mentorship necessary to discover, explore, and build. We also offer a wide variety of opportunities for students and faculty to gain training and experience as digital humanists.</p>
     </div>
     <figure>
         <img src="" alt="">
