added contact info to top of /people (needs styling)

--- a/pages/people.html
+++ b/pages/people.html
@@ -18,6 +18,7 @@ nav: true
   </header>
 
   <article class="people-main-content">
+<div>Contact the Scholars' Lab by emailing <a href="mailto:scholarslab@virginia.edu">scholarslab@virginia.edu</a>; we'll get you to the right person!</div>
     <!-- staff: -->
     <section class="people__staff">
       <div class="people-staff__title">
