--- a/pages/people.html
+++ b/pages/people.html
@@ -18,7 +18,10 @@ nav: true
   </header>
 
   <article class="people-main-content">
+
+<!-- needs styling -->
 <div>Contact the Scholars' Lab by emailing <a href="mailto:scholarslab@virginia.edu">scholarslab@virginia.edu</a>; we'll get you to the right person!</div>
+
     <!-- staff: -->
     <section class="people__staff">
       <div class="people-staff__title">
