--- a/pages/blog.html
+++ b/pages/blog.html
@@ -61,7 +61,7 @@ regenerate: true
 				{% if post.pull-quote %}
 				<div class="blog-item__quote">{{ post.pull-quote | prepend: '"' | append: '"' | smartify }}</div>
 				{% else %}
-				<div class="blog-item__quote">{{ post.content | truncatewords: 25 | markdownify | strip_html }}</div>
+				<div class="blog-item__quote">{{ post.content | strip_html | truncatewords: 25 | markdownify }}</div>
 				{% endif %}
 				<div class="blog-item__metadata">
 					<div class="blog-meta__author">
@@ -75,7 +75,7 @@ regenerate: true
 				</div>
 			</section>
 			{% endfor %} <!-- end post -->
-			
+
 <section id="previous_posts">
 <h2>Previous Posts</h2>
 <ul class="page-previous_posts">
