--- a/pages/blog.html
+++ b/pages/blog.html
@@ -57,9 +57,9 @@ regenerate: true
 					<!-- # NB: no slash in href b/c included in post.url -->
 					<a href="{{ site.baseurl }}{{ post.url }}" aria-label="{{ post.title }}" title="{{ post.title }}">{{ post.title | replace: ' - ', ': ' }}</a>
 				</div>
-				<!-- # pull quote, or 1st 25 words of post content. -->
-				{% if post.pull-quote %}
-				<div class="blog-item__quote">{{ post.pull-quote | prepend: '"' | append: '"' | smartify }}</div>
+				<!-- # Summary from YAML, or 1st 25 words of post content. -->
+				{% if post.summary %}
+				<div class="blog-item__quote">{{ post.summary | smartify }}</div>
 				{% else %}
 				<div class="blog-item__quote">{{ post.content | strip_html | truncatewords: 25 | markdownify }}</div>
 				{% endif %}
