Updates nav info arch, w/1 exception...
Changes navigation to match latest plan of pages/org; adjusts /pages YAML, config, CSS to match; adds pages that didn't exist.
NOTE: eventually want first link to be “About” with a submenu to “Charter” (and eventually “Accessibility”), not "Opportunities". I left in the “Opportunities” > students opps setup for now instead, since the demo of dropdown is tied into that and I couldn't figure out in 30 seconds how to edit that

--- a/pages/dh-code-design.html
+++ b/pages/dh-code-design.html
@@ -1,9 +1,8 @@
 ---
 layout: page
-title: "Research and Development"
-permalink: /research-and-development/
+title: "DH Code + Design"
+permalink: /dh-code-design/
 nav: true
-order: 6
 ---
 
 <section>
