--- a/pages/scholarship/scholarship.html
+++ b/pages/scholarship/scholarship.html
@@ -5,6 +5,8 @@ permalink: /scholarship/
 nav: true
 order: 5
 ---
- 
+
+We use "scholarship" to encompass all forms of knowledge making, both teaching and research. We also define "research" broadly across the many methods of making knowledge, including archival research, coding, writing, teaching, making, crafting, mapping, creating resources (including datasets, bibliographies, tutorials, and libguides), and play.
+
 * [Research blog](/blog)
 * [Research work](/work)
