Updates office location for Spatial Tech.

--- a/pages/spatial-technologies.html
+++ b/pages/spatial-technologies.html
@@ -72,11 +72,11 @@ order: 6
 			<ul class="spatial-starting__gis">
 				<h3>GIS staff availability</h3>
 				<li>Staff: Chris Gist and Drew MacQueen</li>
-				<li>Office: Clemons 3rd Floor (DML wing)</li>
+				<li>Office: Shannon Library, Room 308</li>
 		  	    <li>Hours: Weekdays 9-5 in general, but <a href="mailto: slabgis@virginia.edu">email the GIS folks</a> in advance if you need us to be there</li>
 				<h3>Cultural heritage informatics staff availability</h3>
 				<li>Staff: Will Rourk and Arin Bennett</li>
-				<li>Office: Clemons 3rd Floor (DML wing)</li>				
+				<li>Office: Shannon Library, Room 308</li>
 				<li>Hours: by appointment</li>
 			</ul>
 		</div>
@@ -113,7 +113,7 @@ order: 6
 		  <ul class="maker-list__3d">
 			  <span><a href="https://guides.lib.virginia.edu/gis/software">GIS software & extensions</a></span>
 		    <li><a href="https://guides.lib.virginia.edu/gis/software#s-lib-ctab-20595149-1">ArcGIS Pro</a></li>
-		    <li>ArcMap</li>			
+		    <li>ArcMap</li>
 		    <li>ArcGIS Server</li>
 		    <li>Drone2Map*</li>
 			<li>City Engine*</li>
