--- a/pages/expertise/makerspace/workshops/arduino-workshop.html
+++ b/pages/expertise/makerspace/workshops/arduino-workshop.html
@@ -1,8 +1,9 @@
 ---
 layout: page
 title: Basic Arduino Workshop
-permalink: /makerspace/workshops/arduino/
 nav: false
+redirect_from:
+  - /makerspace/workshops/arduino
 ---
 <style>
   table,
