--- a/pages/expertise/spatial-technologies/spatial-technologies.html
+++ b/pages/expertise/spatial-technologies/spatial-technologies.html
@@ -1,8 +1,9 @@
 ---
 layout: page
 title: Spatial Tech
-permalink: /spatial-technologies/
 nav: true
+redirect_from:
+  - /spatial-technologies
 ---
 
 <div class="spatial-main-content">
