--- a/pages/scholarship/blog.html
+++ b/pages/scholarship/blog.html
@@ -1,12 +1,13 @@
 ---
 layout: page
 title: Blog
-permalink: /blog/
 pagination:
   enabled: true
 nav: true
 regenerate: true
 excerpt: "Our thoughts, from rough new ideas to polished arguments. Scholars’ Lab team and collaborators write about their scholarship."
+redirect_from:
+  - /blog
 
 ---
 
