--- a/pages/about/people.html
+++ b/pages/about/people.html
@@ -1,8 +1,9 @@
 ---
 layout: page
 title: People
-permalink: /people/
 nav: true
+redirect_from:
+  - /people
 ---
 
 <!-- pull staff directors & staff -->
