--- a/pages/expertise/dh-code-design/dh-code-design.html
+++ b/pages/expertise/dh-code-design/dh-code-design.html
@@ -1,8 +1,9 @@
 ---
 layout: page
 title: "DH Code + Design"
-permalink: /dh-code-design/
 nav: true
+redirect_from:
+  - /research-and-development
 ---
 
 <section>
