--- a/pages/expertise/makerspace/makerspace.html
+++ b/pages/expertise/makerspace/makerspace.html
@@ -1,10 +1,11 @@
 ---
 layout: page
 title: Makerspace
-permalink: /makerspace/
 excerpt: "Our makerspace is a place for crafting, tinkering, and experimentation with technologies like 3D printing,
 textiles, electronics and physical computing. Open to everyone."
 nav: true
+redirect_from:
+  - /makerspace
 ---
 
   <div class="makerspace__ethos">
