Redirect & content updates...
- Finished updating /about to include all new GDoc text plus edited past FAQ; moved some past FAQ text into new collab/community/expertise subpages
- Added more redirects (many for old blog posts; from this list: https://github.com/scholarslab/scholarslab.org/issues/992#issuecomment-2218265235)

--- a/pages/community/spaces-equipment.html
+++ b/pages/community/spaces-equipment.html
@@ -2,6 +2,10 @@
 layout: page
 title: Spaces and Equipment
 nav: true
+redirect_from:
+  - /hours-and-spaces
+  - /locations
+  - /about/hours-and-spaces
 ---
  
 #tk
