--- a/pages/expertise/makerspace/makerspace.html
+++ b/pages/expertise/makerspace/makerspace.html
@@ -6,13 +6,15 @@ textiles, electronics and physical computing. Open to everyone."
 nav: true
 redirect_from:
   - /makerspace
+  - /makerspace/makerspace-3d-printer-calendar
+  - /makerspace/#calendar-link 
 ---
 
   <div class="makerspace__ethos">
     <div class="banner">
       <h2>New Location!</h2>
-      <p>The Scholars&rsquo; Lab and the Makerspace (formerly TinkerTank) have
-      moved back to the Edgar Shannon Library (formerly Alderman), 3rd Floor.</p>
+      <p>The Scholars&rsquo; Lab and its Makerspace (formerly aka TinkerTank) have
+      moved back into the Shannon Library (formerly Alderman), 3rd Floor East.</p>
       <p>Look to our <a
           href="https://scholarslab.lib.virginia.edu/events/">events page</a>
       for upcoming workshops and events!</p>
