--- a/pages/expertise/spatial-technologies/spatial-technologies.html
+++ b/pages/expertise/spatial-technologies/spatial-technologies.html
@@ -4,6 +4,7 @@ title: Spatial Tech
 nav: true
 redirect_from:
   - /spatial-technologies
+  - /geospatial-services
 ---
 
 <div class="spatial-main-content">
