--- a/pages/scholarship/blog.html
+++ b/pages/scholarship/blog.html
@@ -8,7 +8,7 @@ regenerate: true
 excerpt: "Our thoughts, from rough new ideas to polished arguments. Scholars’ Lab team and collaborators write about their scholarship."
 redirect_from:
   - /blog
-
+  - /archives
 ---
 
 			<!-- post layout: -->
