--- a/pages/scholarship/work.html
+++ b/pages/scholarship/work.html
@@ -5,6 +5,7 @@ excerpt: "Here we share a sampling of the Scholars’ Lab scholarship in its man
 nav: true
 redirect_from:
   - /work
+  - /research
 ---
     <!-- staff: -->
     <section class="people__staff">
