Fixing redirect breaks & adds expertise>pedagogy
-Still checking all redirects fixed locally, may have another commit for finishing that
-Fixes broken links I'd introduced. YAML permalinks are how we use whatever file folders we want, but get nice clean URLs that don't say things like /for-student/for-students
-Points to for-students page as a way to show "DH pedagogy" under "expertise" menu list, while also having for-students linked from the "collaborate" nav menu

--- a/pages/about/people.html
+++ b/pages/about/people.html
@@ -1,9 +1,8 @@
 ---
 layout: page
 title: People
+permalink: /people/
 nav: true
-redirect_from:
-  - /people
 ---
 
 <!-- pull staff directors & staff -->
