--- a/pages/scholarship/work.html
+++ b/pages/scholarship/work.html
@@ -1,10 +1,10 @@
 ---
 layout: page
 title: Our Work
+permalink: /work/
 excerpt: "Here we share a sampling of the Scholars’ Lab scholarship in its many states and forms, from incipient ideas to projects with their own laptop stickers."
 nav: true
 redirect_from:
-  - /work
   - /research
 ---
     <!-- staff: -->
