--- a/pages/community/events.html
+++ b/pages/community/events.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 title: Events
+permalink: /events/
 excerpt: "Current and past events hosted, sponsored, or partnered on by the Scholars' Lab."
 nav: true
 redirect_from:
