--- a/pages/scholarship/blog.html
+++ b/pages/scholarship/blog.html
@@ -3,11 +3,11 @@ layout: page
 title: Blog
 pagination:
   enabled: true
+permalink: /blog/
 nav: true
 regenerate: true
 excerpt: "Our thoughts, from rough new ideas to polished arguments. Scholars’ Lab team and collaborators write about their scholarship."
 redirect_from:
-  - /blog
   - /archives
 ---
 
