Altered nav/pages/config to fit new structure

--- a/pages/consult/code-design/code-design.html
+++ b/pages/consult/code-design/code-design.html
@@ -1,11 +1,13 @@
 ---
 layout: page
-title: "DH Code + Design"
-permalink: /dh-code-design/
+title: "Code + Design"
+permalink: /code-design/
 nav: true
 redirect_from:
   - /research-and-development
 ---
+
+<!-- Could add links to overlapping consult areas, e.g. Critical DH, DH pedagogy? -->
 
 <section>
 	<h2>What We Do</h2>
