--- a/pages/events/events.html
+++ b/pages/events/events.html
@@ -2,11 +2,18 @@
 layout: default
 title: Events
 permalink: /events/
-excerpt: "Current and past events hosted, sponsored, or partnered on by the Scholars' Lab."
 nav: true
+order: 6
 redirect_from:
   - /events
 ---
+
+<!-- May wish to reorg into
+* upcoming events
+* past events
+* non-SLab (these would be hidden below decades of events; an alt option is for "past events" to only show the most recent year of events, then have a link that goes to a different page with the entire list of past events?)
+-->
+
 <div class="events-wrapper">
 
 	<header class="events-page-header">
