--- a/pages/scholarship/our-projects.html
+++ b/pages/scholarship/our-projects.html
@@ -1,12 +1,17 @@
 ---
 layout: page
-title: Our Work
-permalink: /work/
-excerpt: "Here we share a sampling of the Scholars’ Lab scholarship in its many states and forms, from incipient ideas to projects with their own laptop stickers."
+title: Our Projects
+permalink: /our-projects/
 nav: true
 redirect_from:
   - /research
+  - /work
 ---
+
+<!-- May eventually order into sections, or otherwise visually indicate what projects are student, faculty, internal; I believe _work already uses 3-4 categories that would allow this. -->
+
+<p>Here we share a sampling of the Scholars’ Lab scholarship in its many states and forms, from incipient ideas to formal projects with their own laptop stickers.</p>
+
 <!-- code confusingly reuses CSS styles from /people page, is why the name are staff/peopel-related -->
 
 <section class="people__staff">
