--- a/pages/consult/dh-pedagogy/dh-pedagogy.html
+++ b/pages/consult/dh-pedagogy/dh-pedagogy.html
@@ -5,6 +5,8 @@ permalink: /dh-pedagogy/
 nav: true
 ---
 
+<!-- Add invitation for how/who to get in touch with? -->
+
 The lab offers expertise in critical digital humanities and experimental scholarship pedagogies, including at the undergraduate, graduate, and post-graduate levels. We offer consultation, syllabus review, co-teaching, and other forms of support for developing digital pedagogy and implementing it in the classroom.
 
 Our research blog offers a number of pieces related to critical digital pedagogies:
