--- a/pages/consult/dh-pedagogy/dh-pedagogy.html
+++ b/pages/consult/dh-pedagogy/dh-pedagogy.html
@@ -7,7 +7,9 @@ nav: true
 
 <!-- Add invitation for how/who to get in touch with? -->
 
-The lab offers expertise in critical digital humanities and experimental scholarship pedagogies, including at the undergraduate, graduate, and post-graduate levels. We offer consultation, syllabus review, co-teaching, and other forms of support for developing digital pedagogy and implementing it in the classroom.
+The lab offers expertise in digital humanities (DH) and experimental scholarship pedagogies, including at the undergraduate, graduate, and post-graduate levels. We offer consultation, syllabus review, co-teaching, and other forms of support for developing digital pedagogy and implementing it in the classroom, and our leadership and participation in the [external DH community](/critical-dh) allows us to inform and be informed by the latest DH pedagogy research and practice.
+
+We frequently publish on critical digital pedagogies, including in peer-reviewed journals such as [The Journal of Interactive Technology and Pedagogy](https://cuny.manifoldapp.org/read/a-way-in-digital-pedagogy-training-with-speculative-low-tech-workshops/section/d26fab6f-c473-489a-9516-a6e6f0c747a7); in edited volumes including <ins>The Digital Futures of Graduate Study in the Humanities</ins> and <ins>What We Teach When We Teach DH: Digital Humanities in the Classroom</ins>; and in other public formats such as <ins>[Digital Pedagogy in the Humanities: Concepts, Models, and Experiments](https://digitalpedagogy.hcommons.org/)</ins> and <ins>#DLFTeach Toolkit: Lesson Plans for Digital Library Instruction</ins>. 
 
 Our research blog offers a number of pieces related to critical digital pedagogies:
 
