Forgot line of text

--- a/pages/about/accessibility.html
+++ b/pages/about/accessibility.html
@@ -26,6 +26,7 @@ redirect_from:
 
 <p>If you have suggestions for improvement, or encounter anything that hinders your use of the content or tool we provide, please <a href="mailto:scholarslab@virginia.edu">email us</a>.</p>
 
+<p>Below are our research blog posts related to accessibility:</p>
 <ul>
 {%- for post in site.tags.accessibility -%}
 	<li>
