--- a/index.html
+++ b/index.html
@@ -18,12 +18,22 @@ title: Home
     </div>
     <div id="recent-posts">
         <h2>Recent Blog Posts</h2>
-        <ul>
-            {% for post in site.posts limit:4 %}
+        <ul>           
+			{% for post in site.posts limit:4 %}
             <li><a href="{{ post.url }}">{{ post.title }}</a></li>
             {% endfor %}
         </ul>
         <p><a href="/blog/">See all our blog posts</a>.</p>
+    </div>
+    <div id="recent-posts">
+        <h2>Recent Activity</h2>
+<ul>
+{%- assign updates = site.posts| where: "type", "update" -%}
+{% for update in updates limit:3 %}
+	<li>{{ update.content }}</li>
+{% endfor %}
+</ul>
+        <p><a href="/news/">See all our quick scholarly activity updates</a>.</p>
     </div>
 </section>
 
